--- a/google-samples/java/javaDesktop/test-output/old/Google Test Suite/methods-alphabetical.html
+++ b/google-samples/java/javaDesktop/test-output/old/Google Test Suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Google Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d8887">  <td>16/01/13 21:32:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTestsDesktop.GoogleComposeEmail()[pri:3, instance:google.GoogleTestsDesktop@357246de]">GoogleComposeEmail</td> 
+<tr bgcolor="7d8887">  <td>16/01/13 21:51:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTestsDesktop.GoogleComposeEmail()[pri:3, instance:google.GoogleTestsDesktop@357246de]">GoogleComposeEmail</td> 
   <td>main@1784662007</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/01/13 21:32:58</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTestsDesktop.GoogleLogin_Invalid()[pri:1, instance:google.GoogleTestsDesktop@357246de]">GoogleLogin_Invalid</td> 
+<tr bgcolor="7d8887">  <td>16/01/13 21:50:34</td>   <td>-35552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTestsDesktop.GoogleLogin_Invalid()[pri:1, instance:google.GoogleTestsDesktop@357246de]">GoogleLogin_Invalid</td> 
   <td>main@1784662007</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/01/13 21:32:58</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTestsDesktop.GoogleLogin_Valid()[pri:2, instance:google.GoogleTestsDesktop@357246de]">GoogleLogin_Valid</td> 
+<tr bgcolor="7d8887">  <td>16/01/13 21:50:43</td>   <td>-26764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTestsDesktop.GoogleLogin_Valid()[pri:2, instance:google.GoogleTestsDesktop@357246de]">GoogleLogin_Valid</td> 
   <td>main@1784662007</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/01/13 21:32:58</td>   <td>-144</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleTestsDesktop.Setup(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:google.GoogleTestsDesktop@357246de]">&gt;&gt;Setup</td> 
+<tr bgcolor="7d8887">  <td>16/01/13 21:50:21</td>   <td>-48705</td> <td>&nbsp;</td><td title="&gt;&gt;GoogleTestsDesktop.Setup(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:google.GoogleTestsDesktop@357246de]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1784662007</td>   <td></td> </tr>
+<tr bgcolor="7d8887">  <td>16/01/13 21:51:09</td>   <td>148</td> <td>&nbsp;</td><td title="&lt;&lt;GoogleTestsDesktop.Teardown()[pri:0, instance:google.GoogleTestsDesktop@357246de]">&lt;&lt;Teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1784662007</td>   <td></td> </tr>
 </table>
