--- a/google-samples/java/javaDesktop/test-output/emailable-report.html
+++ b/google-samples/java/javaDesktop/test-output/emailable-report.html
@@ -29,27 +29,41 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing=0 cellpadding=0 class="param">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Google Tests</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">49,2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Google Tests</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">42,2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <a id="summary"></a>
 <table cellspacing=0 cellpadding=0 class="passed">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Google Tests &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="2">google.GoogleTestsDesktop<td><a href="#m1"><b>GoogleLogin_Invalid</b>  ("should not accept empty email or invalid email")</a></td><td class="numi">1</td><td>1452696634291</td><td class="numi">8785</td></tr><tr class="failedodd"><td><a href="#m2"><b>GoogleComposeEmail</b>  ("should compose email successfully by Gmail1")</a></td><td class="numi">1</td><td>1452696669843</td><td class="numi">132</td></tr>
+<tr class="failedodd"><td rowspan="2">google.GoogleTestsDesktop<td><a href="#m1"><b>GoogleLogin_Valid</b>  ("should accept valid credentials")</a></td><td class="numi">1</td><td>1452325996907</td><td class="numi">23527</td></tr><tr class="failedodd"><td><a href="#m2"><b>GoogleComposeEmail</b>  ("should compose email successfully by Gmail1")</a></td><td class="numi">1</td><td>1452326020437</td><td class="numi">47</td></tr>
 <tr><th colspan="4">Google Tests &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">google.GoogleTestsDesktop<td><a href="#m3"><b>GoogleLogin_Valid</b>  ("should accept valid credentials")</a></td><td class="numi">1</td><td>1452696643079</td><td class="numi">26762</td></tr>
+<tr class="passedodd"><td rowspan="1">google.GoogleTestsDesktop<td><a href="#m3"><b>GoogleLogin_Invalid</b>  ("should not accept empty email or invalid email")</a></td><td class="numi">1</td><td>1452325983140</td><td class="numi">13767</td></tr>
 </table>
 <h1>Google Tests</h1>
-<a id="m1"></a><h2>google.GoogleTestsDesktop:GoogleComposeEmail</h2>
+<a id="m1"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Valid</h2>
 <div style="padding-left:3em">
-<p>Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[text()=&apos;COMPOSE&apos;]&quot;}
-Command duration or timeout: 28 milliseconds
+<p>expected:&lt;false&gt; but was:&lt;true&gt;</p>
+org.testng.Assert.fail(Assert.java:89)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:489)
+<br/>at org.testng.Assert.assertEquals(Assert.java:118)
+<br/>at org.testng.Assert.assertEquals(Assert.java:281)
+<br/>at org.testng.Assert.assertEquals(Assert.java:291)
+<br/>at google.GoogleTestsDesktop.GoogleLogin_Valid(GoogleTestsDesktop.java:77)
+<br/>25 lines not shown
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<a id="m2"></a><h2>google.GoogleTestsDesktop:GoogleComposeEmail</h2>
+<div style="padding-left:3em">
+<p>no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[text()=&apos;COMPOSE&apos;]&quot;}
+  (Session info: chrome=47.0.2526.106)
+  (Driver info: chromedriver=2.20.353145 (343b531d31eeb933ec778dbcf7081628a1396067),platform=Windows NT 6.1 SP1 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 45 milliseconds
 For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
 Build info: version: &apos;2.48.2&apos;, revision: &apos;41bccdd10cf2c0560f637404c2d96164b67d9d67&apos;, time: &apos;2015-10-09 13:08:06&apos;
-System info: host: &apos;JosephThanh-PC&apos;, ip: &apos;192.168.0.101&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_66&apos;
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=43.0.1, platform=WINDOWS, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
-Session ID: aa0a42b0-fad0-445a-b4f7-b3fc01ce7b7d
+System info: host: &apos;JosephThanh-PC&apos;, ip: &apos;192.168.10.67&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_66&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, chrome={userDataDir=C:\Users\JOSEPH~1\AppData\Local\Temp\scoped_dir5168_22602}, takesHeapSnapshot=true, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=47.0.2526.106, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
+Session ID: 90f176989c53395024a14cdf4cdc6f8a
 *** Element info: {Using=xpath, value=//div[text()=&apos;COMPOSE&apos;]}</p>
 sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 <br/>at sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)
@@ -60,33 +74,10 @@ sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 <br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:647)
 <br/>at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
 <br/>at org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:490)
-<br/>at google.GoogleTestsDesktop.GoogleComposeEmail(GoogleTestsDesktop.java:87)
-<br/>25 lines not shown
-<p>Caused by Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[text()=&apos;COMPOSE&apos;]&quot;}
-For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
-Build info: version: &apos;2.48.2&apos;, revision: &apos;41bccdd10cf2c0560f637404c2d96164b67d9d67&apos;, time: &apos;2015-10-09 13:08:06&apos;
-System info: host: &apos;JosephThanh-PC&apos;, ip: &apos;192.168.0.101&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_66&apos;
-Driver info: driver.version: unknown</p>
-&lt;anonymous class&gt;.FirefoxDriver.prototype.findElementInternal_(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous1873778845311835559webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js:10659)
-<br/>at &lt;anonymous class&gt;.FirefoxDriver.prototype.findElement(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous1873778845311835559webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js:10668)
-<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.executeInternal_/h(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous1873778845311835559webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12534)
-<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.executeInternal_(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous1873778845311835559webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12539)
-<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.execute/&lt;(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous1873778845311835559webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12481)
-<br/>1 lines not shown
-</div>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<a id="m2"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Invalid</h2>
-<div style="padding-left:3em">
-<p>expected:&lt;Please enter your email.&gt; but was:&lt;Vui l?ng nh?p email c?a b?n.&gt;</p>
-org.testng.Assert.fail(Assert.java:89)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:489)
-<br/>at org.testng.Assert.assertEquals(Assert.java:118)
-<br/>at org.testng.Assert.assertEquals(Assert.java:171)
-<br/>at org.testng.Assert.assertEquals(Assert.java:181)
-<br/>at google.GoogleTestsDesktop.GoogleLogin_Invalid(GoogleTestsDesktop.java:67)
+<br/>at google.GoogleTestsDesktop.GoogleComposeEmail(GoogleTestsDesktop.java:83)
 <br/>25 lines not shown
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<a id="m3"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Valid</h2>
+<a id="m3"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Invalid</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
